--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -168,7 +168,7 @@ div {text-align: center;}
       each button has a data-post-id attached in which the posts.id is attached to.
       the item with likes count is given an idea which is also associated with posts.id --}}
       {{#each posts }}
-
+      <div class="box">
       <div class="posts" style="margin-left: 50px">
         <div>
           <b>{{ this.message }}</b><br>
@@ -237,9 +237,9 @@ div {text-align: center;}
 
 
 
-
+  <br>
   {{/each}}
-
+  </div>
   </div>
 <br>
 
