--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,9 @@
+<img src="/images/working.gif" alt="Please forgive us">
+
+<h1> Oops, redirecting!</h1>
+
+
 <h1>{{message}}</h1>
 <h2>{{error.status}}</h2>
 <pre>{{error.stack}}</pre>
+
