--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -41,7 +41,7 @@
 <input id="submit" type="submit" value="Sign up">
 </form> <br>
 {{!-- currently doesn't work needs to have a new route added with a form --}}
-<form id="new-session-form" action="/sessions" method="post">
+<form id="new-session-form" action="/users/forgot" method="get">
 <input id="submit" type="submit" value="Forgot password">
 </form><br>
 </div>
