--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    {{!-- <link rel='stylesheet' href='/stylesheets/style.css' /> --}}
   </head>
   <body>
-    <form action='/sessions?_method=DELETE' method='POST'>
+    {{!-- <form action='/sessions?_method=DELETE' method='POST'>
       <input type="submit" value="Log Out">
-    </form>
+    </form> --}}
     {{{body}}}
   </body>
 </html>
