--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,7 +1,20 @@
-<form id="new-user-form" action="/users" method="post">
-  <label for="email">Email: </label>
-  <input id="email" type="email" name="email" value="">
-  <label for="password">Password: </label>
-  <input id="password" type="password" name="password" value="">
-  <input id="submit" type="submit" value="Submit">
-</form>
+<!DOCTYPE html>
+  <html>  
+    <head> 
+      <link href="/signin-style.css" rel="stylesheet"/>
+    </head>
+      <body>
+        <form id="new-user-form" action="/users" method="post">
+
+          <label for="email">Email: </label>
+          <input id="email" type="email" name="email" value="">
+
+        <div class="password-field">
+          <label for="password">Password: </label>
+          <input id="password" type="password" name="password" value="">
+        </div>
+
+          <input id="submit" type="submit" value="Submit">
+        </form>
+      </body>
+  </html> 
