--- a/public/stylesheets/signin-style.css
+++ b/public/stylesheets/signin-style.css
@@ -1,4 +1,9 @@
-
+body {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
 input[type=email], input[type=password] {
     border-radius: 10px;
@@ -10,8 +15,15 @@ input[type=email], input[type=password] {
     background: #cec8f82e;
 }
 
-.password-field {
+.password-field, .email-field {
     display:flex;
     flex-direction: column;
     width: 100%
 }
+
+.user-inputs {
+    display:flex;
+    flex-direction: column;
+    width: 100%;
+}
+
