--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -6,6 +6,8 @@
   <form action="/posts/{{this._id}}/like" method="post">
     <button type="submit">Like</button>
   </form>
+  <a href="/posts/{{this._id}}">More details</a>
+  <p>=====================</p>
   {{/each}}
 </ul>
 
