--- a/public/stylesheets/post-new.css
+++ b/public/stylesheets/post-new.css
@@ -53,7 +53,7 @@ body {
     box-shadow: 3px 5px #2B2D42;
     padding: 3%;
     background-color: #8D99AE;
-    width: 50%;
+    width: 400px;
     position: fixed;
     top: 50%;
     left: 50%;
