--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
   <html>  
     <head> 
-      <link href="/signin-style.css" rel="stylesheet"/>
+      <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+      <link href="../stylesheets/signup.css" rel="stylesheet"/>
     </head>
-      <body>
-        <form id="new-user-form" action="/users" method="post">
-          <div class="user-inputs">
-            <div class="email-field">
-              <label for="email">Email: </label>
-              <input id="email" type="email" name="email" value="">
-            </div>
-
-            <div class="password-field">
-              <label for="password">Password: </label>
-              <input id="password" type="password" name="password" value="">
-            </div>
+  <body>
+    <header>
+      <span class="site_logo"> 
+        <img src="/images/logo trial 3.png" alt="Acebook" height="50">
+      </span>
+      <span class="login-signup">
+        <a href="/sessions/new">Log In</a>
+        <span class="larger">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+        <a href="/users/new">Sign Up</a>
+      </span>
+    </header> 
+      <form id="new-user-form" action="/users" method="post">
+        <div class="user-inputs">
+          <div class="username-field"
+            label for="username">Username: </label>
+            <input id="username" type="text" name="username" minlength = "4" maxlength = "25" pattern="^[a-zA-Z]+[a-zA-Z0-9.$@£_%+-]+$" required>
           </div>
+          <div class="email-field">
+            <label for="email">Email: </label>
+            <input id="email" type="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+          </div>
+          <div class="password-field">
+            <label for="password">Password: </label>
+            <input id="password" type="password" name="password" minlength="8" maxlength = "32" pattern = "^[a-zA-Z0-9!@#\$%\^\&*_=+-]{8,12}+$" required>
+          </div>
+        </div>
           <input id="submit" type="submit" value="Submit">
         </form>
       </body>
+    <footer>Credits</footer>
   </html> 
