--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,9 +5,25 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <form action='/sessions?_method=DELETE' method='POST'>
-      <input type="submit" value="Log Out">
-    </form>
+    
+    <header>
+      <nav>
+        <ul>
+          <li><a href='/posts'>Home</a></li>
+          <li><a href='/posts/myposts'>My Posts</a></li>
+          <li><a href='/users/messages'>Messages</a></li>
+          <li><a href='/users/friends'>Friends</a></li>
+          <li><a href='/users/notifications'>Notifications</a></li>
+          <li><a href='/users/profile'>Profile</a></li>
+        </ul>
+      </nav>
+
+      <form action='/sessions?_method=DELETE' method='POST'>
+        <input type="submit" value="Log Out">
+      </form>
+    </header>
+    
     {{{body}}}
   </body>
 </html>
+
