sign-up validation done

--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-  <html>  
-    <head> 
-      <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-      <link href="../stylesheets/signup.css" rel="stylesheet"/>
-    </head>
+<html>
+  <head>
+    <script
+      src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+    <link href="../stylesheets/signup.css" rel="stylesheet"/>
+  </head>
   <body>
     <header>
-      <span class="site_logo"> 
+      <span class="site_logo">
         <img src="/images/logo trial 3.png" alt="Acebook" height="50">
       </span>
       <span class="login-signup">
@@ -14,24 +15,28 @@
         <span class="larger">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
         <a href="/users/new">Sign Up</a>
       </span>
-    </header> 
-      <form id="new-user-form" action="/users" method="post">
-        <div class="user-inputs">
-          <div class="username-field"
-            label for="username">Username: </label>
-            <input id="username" type="text" name="username" minlength = "4" maxlength = "25" pattern="^[a-zA-Z]+[a-zA-Z0-9.$@£_%+-]+$" required>
-          </div>
-          <div class="email-field">
-            <label for="email">Email: </label>
-            <input id="email" type="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
-          </div>
-          <div class="password-field">
-            <label for="password">Password: </label>
-            <input id="password" type="password" name="password" minlength="8" maxlength = "32" pattern = "^[a-zA-Z0-9!@#\$%\^\&*_=+-]{8,12}+$" required>
-          </div>
+    </header>
+    <form id="new-user-form" action="/users" method="post">
+      <div class="user-inputs">
+        <div class="username-field">
+          <label for="username">Username: </label>
+          <input id="username" type="text" name="username" minlength="4"
+            maxlength="25" pattern="^[a-zA-Z]+[a-zA-Z0-9.$@£_%+-]+$" required>
         </div>
-          <input id="submit" type="submit" value="Submit">
-        </form>
-      </body>
-    <footer>Credits</footer>
-  </html> 
+        <div class="email-field">
+          <label for="email">Email: </label>
+          <input id="email" type="email" name="email"
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+        </div>
+        <div class="password-field">
+          <label for="password">Password: </label>
+          <input id="password" type="password" name="password" minlength="8"
+            maxlength="32" pattern="^[a-zA-Z0-9!@#\$%\^\&*_=+-]{8,12}+$"
+            required>
+        </div>
+      </div>
+      <input id="submit" type="submit" value="Submit">
+    </form>
+  </body>
+  <footer>Credits</footer>
+</html>
