clean up before push

--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,2 +1,10 @@
 <h1 class="title">{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+<form method = 'GET' action = '/users/new'> 
+    <input type = 'submit' value = 'Signup' >
+</form> 
+
+<form method = 'GET' action = '/login'>
+        <input type = 'submit' value = 'Login' >
+</form>
