--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -3,5 +3,6 @@
   <input id="email" type="email" name="email" value="" required>
   <label for="password">Password: </label>
   <input id="password" type="password" name="password" value="" minlength="8" required>
-  <input id="submit" type="submit" value="Submit">
+  <input id="submit" type="submit" value="Sign Up">
 </form>
+<p>{{this.error}}</p>
