--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -20,5 +20,5 @@
             <h1 class="title">{{title}}</h1>
             <p>Missing the "F"...<br>...as in "Funding"</p> </div>
     </body>
-    <footer>Credits</footer>
+<footer>Acebook™ in partnership with Eta™</footer>
 </html>
