--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: "Optima", sans-serif;
 }
 
 form {
@@ -37,8 +38,8 @@ input[type=email], input[type=password], input[type=text] {
     display:flex;
     flex-direction: column;
     width: 100%;
-    font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+    font-family: "Optima", sans-serif;
+}    
 
 input[type=submit] {
   border-radius: 10px;
@@ -50,7 +51,7 @@ input[type=submit] {
   cursor: pointer;
   width: 106%;
   opacity: 0.9;
-  font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: "Optima", sans-serif;
 }
 
 a {
@@ -63,8 +64,8 @@ a {
     width: 100%;
     padding-top: 2%;
     padding-bottom: 2%;
-    padding-left: 15%;
-    padding-right: 15%;
+    padding-left: 5%;
+    padding-right: 5%;
     margin-bottom: 50px;
     background-color: #2B2D42;
     color:#edf2f4;
@@ -77,7 +78,7 @@ a {
     width: 100%;
     padding-top: 2%;
     padding-bottom: 2%;
-    padding-right: 5%;
+    padding-right: 2%;
     background-color: #2B2D42;
     color:#edf2f4;
     text-align: center;
@@ -85,12 +86,12 @@ a {
 
   span{
     align-self: center;
+    justify-content: space-between;
   }
 
   span.site_logo{
     padding: 0%;
     color: #edf2f4;
-    height: 100%;
     padding-left: 15px;
   }
 
