--- a/public/stylesheets/user-index.css
+++ b/public/stylesheets/user-index.css
@@ -1,6 +1,7 @@
 *{
   margin: 0; 
   padding: 0;
+  font-family: "Optima", sans-serif;
 }
 
 
@@ -45,7 +46,6 @@ div.container{
   transform: translate(-50%, -50%);
 }
 body {
-    font-family: Arial, Helvetica, sans-serif;
     background-color: #edf2f4;
     color: #2B2D42;
 }
@@ -95,23 +95,28 @@ input[type=submit]:hover {
   padding-right: 50%;
 }
 
-  header{
-    display: flex;
-    padding-top: 3%;
-    padding-bottom: 2%;
-    padding-left: 5%;
-    padding-right: 5%;
-    background-color: #2B2D42;
-    color:#edf2f4;
-    justify-content: space-between;
-  }
+header{
+  display: flex;
+  width: 90%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 5%;
+  padding-right: 5%;
+  margin-bottom: 50px;
+  background-color: #2B2D42;
+  color:#edf2f4;
+  justify-content: space-between;
+  align-items: center;
+}
+
 
   footer{
     position: fixed;
     bottom: 0%;
     width: 100%;
-    padding-top: 3%;
-    padding-bottom: 3%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-right: 2%;
     background-color: #2B2D42;
     color:#edf2f4;
     text-align: center;
@@ -121,6 +126,14 @@ input[type=submit]:hover {
     align-self: right;
     justify-content: space-between;
   }
+
+  span.site_logo{
+    padding: 0%;
+    color: #edf2f4;
+    padding-left: 0px;
+    padding-bottom: 0px;
+  }
+
 
 form{
   display: flex;
