--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -33,5 +33,5 @@
           <input id="submit" type="submit" value="Submit">
         </form>
       </body>
-    <footer>Credits</footer>
+<footer>Acebook™ in partnership with Eta™</footer>
   </html> 
