Added some CSS and fixed some layout stuff

--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -10,6 +10,7 @@
             <span class="site_logo">
                 <img src="/images/logo trial 3.png" alt="Acebook" height="50">
             </span>
+            
             <span>
                 <a href="/sessions/new">Log In</a>
                 <span class="larger">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
@@ -20,5 +21,5 @@
             <h1 class="title">{{title}}</h1>
             <p>Missing the "F"...<br>...as in "Funding"</p> </div>
     </body>
-    <footer>Credits</footer>
+    <footer>Acebook™ in partnership with Eta™</footer>
 </html>
