--- a/public/stylesheets/home-index.css
+++ b/public/stylesheets/home-index.css
@@ -1,11 +1,12 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: "Optima", sans-serif;
 }
 body {
-    font: "Lucida Grande", Helvetica, Arial, sans-serif;
     background-color: #edf2f4;
     color: #2B2D42;
+    height: 130px;
   }
   
   a {
@@ -15,22 +16,25 @@ body {
 
   header{
     display: flex;
-    padding-top: 3%;
-    padding-bottom: 3%;
-    padding-left: 5%;
-    padding-right: 5%;
+    width: 94%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 3%;
+    padding-right: 3%;
+    margin-bottom: 50px;
     background-color: #2B2D42;
     color:#edf2f4;
     justify-content: space-between;
+    align-items: center;
   }
 
   footer{
     position: fixed;
     bottom: 0%;
     width: 100%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    padding-right: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-right: 2%;
     background-color: #2B2D42;
     color:#edf2f4;
     text-align: center;
@@ -43,7 +47,6 @@ body {
   span.site_logo{
     padding: 0%;
     color: #edf2f4;
-    height: 100%;
   }
 
   div.content{
