--- a/public/stylesheets/post-new.css
+++ b/public/stylesheets/post-new.css
@@ -1,11 +1,14 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: "Optima", sans-serif;
 }
 body {
-    font: "Lucida Grande", Helvetica, Arial, sans-serif;
+    font: "Optima", sans-serif;
     background-color: #edf2f4;
     color: #2B2D42;
+    height: 130px;
+
   }
   
   a {
@@ -15,22 +18,25 @@ body {
 
   header{
     display: flex;
-    padding-top: 3%;
-    padding-bottom: 3%;
-    padding-left: 5%;
-    padding-right: 5%;
+    width: 94%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 3%;
+    padding-right: 3%;
+    margin-bottom: 50px;
     background-color: #2B2D42;
     color:#edf2f4;
     justify-content: space-between;
+    align-items: center;
   }
 
   footer{
     position: fixed;
     bottom: 0%;
     width: 100%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    padding-right: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-right: 2%;
     background-color: #2B2D42;
     color:#edf2f4;
     text-align: center;
@@ -44,13 +50,11 @@ body {
   span.site_logo{
     padding: 0%;
     color: #edf2f4;
-    height: 100%;
   }
 
   div.new-post{
     font-weight: bolder;
     border-radius: 5px;
-    box-shadow: 3px 5px #2B2D42;
     padding: 3%;
     background-color: #8D99AE;
     width: 400px;
@@ -61,7 +65,6 @@ body {
     flex-direction: column;
     transform: translate(-50%, -50%);
     text-align: center;
-    box-shadow: #8D99AE;
   }
 
   h1{
@@ -82,7 +85,7 @@ body {
     outline: none;
     background: none;
     cursor: pointer;
-    color: #00B7FF;
+    color: #00B7FF !important;
     padding: 0;
     font-family: inherit;
     font-size: inherit;
@@ -92,11 +95,13 @@ input.post{
   align-self: center;
   width: 50%;
   font-weight: bolder;
+  font-size: 20px;
 }
 
 input.post:hover{
   background-color: #2B2D42;
   color: #edf2f4;
+  font-size: 20px;
 }
 
 input[type="file"] {
@@ -104,17 +109,41 @@ input[type="file"] {
 }
 
 .custom-file-upload {
-  font-size: smaller;
-  border: 1px solid #ccc;
-  width: 80%;
   align-self: center;
   display: inline-block;
   background-color: #edf2f4;
   padding: 3px 12px;
   cursor: pointer;
   margin-bottom: 5%;
+  border-radius: 10px;
 }
 .custom-file-upload:hover{
   background-color: #2B2D42;
   color: #edf2f4;
+}
+
+input[type=text] {
+  border-radius: 10px;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #edf2f4;
+}
+
+input[type=submit] {
+  border-radius: 10px;
+  background-color: #2B2D42;
+  color: #EDF2F4;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  opacity: 0.9;
+  font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+.label {
+  font-size: 40px;
+  padding-bottom: 20px;
 }
