--- a/public/stylesheets/posts-index.css
+++ b/public/stylesheets/posts-index.css
@@ -1,12 +1,13 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: "Optima", sans-serif;
 }
 
 body {
-    font: "Lucida Grande", Helvetica, Arial, sans-serif;
     background-color: #edf2f4;
     color: #2B2D42;
+    height: 130px;
 }
   
 a {
@@ -16,31 +17,29 @@ a {
 
 header{
     display: flex;
-    padding-top: 3%;
-    padding-bottom: 3%;
-    padding-left: 5%;
-    padding-right: 5%;
+    width: 94%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 3%;
+    padding-right: 3%;
+    margin-bottom: 50px;
     background-color: #2B2D42;
     color:#edf2f4;
     justify-content: space-between;
-    position: fixed;
-    top:0;
-    right: 0;
-    left: 0;
-    z-index: 10000;
+    align-items: center;
   }
 
-footer{
+  footer{
     position: fixed;
     bottom: 0%;
     width: 100%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    padding-right: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-right: 2%;
     background-color: #2B2D42;
     color:#edf2f4;
-    text-align: left;
-}
+    text-align: center;
+  }
 
 span.request {
     display: flex;
@@ -51,7 +50,6 @@ span.request {
 span.site_logo {
     padding: 0%;
     color: #edf2f4;
-    height: 100%;
 }
 span.user-pic{
     display: flex;
@@ -71,10 +69,9 @@ div.likes-comments{
 div.content {
     width: 50%;
     margin: auto;
-    margin-top: 15%;
+    margin-top: 0%;
     text-align: center;
     box-shadow: #8D99AE;
-    overflow-y: scroll;
 }
 
 div.profile-photo{
@@ -91,7 +88,7 @@ h1 {
 
 p {
     font-size: 20px;
-    margin-top: 5%;
+    margin-top: 3%;
 }
 
 div.post {
@@ -120,3 +117,21 @@ hr {
 .space-evenly {
     justify-content: space-between;
 }
+
+form {
+    padding: 10px;
+}
+
+
+.custom-file-upload {
+    align-self: center;
+    display: inline-block;
+    background-color: #2B2D42;
+    color: #EDF2F4;
+    padding: 3px 12px;
+    cursor: pointer;
+    margin-bottom: 5%;
+    border-radius: 10px;
+    font-size: 20px;
+    border: none;
+  }
