--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -1,33 +1,52 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <script
       src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <link rel='stylesheet' href='/stylesheets/post-new.css' />
   </head>
+
   <body>
     <header>
+
       <span class="site_logo">
         <img src="/images/logo trial 3.png" alt="Acebook" height="50">
       </span>
+
         <span class="larger">
-          <a href="/posts">Home</a>
-          &nbsp;&nbsp;|&nbsp;&nbsp;
-          <form action="/" method="DELETE"><input class="logout" type="submit"
-              value="Log Out"></form>
+
+          <form action="/posts">
+            <input class="logout" type="submit" value="Home">
+          </form>
+
+          <p>&nbsp;&nbsp;|&nbsp;&nbsp;</p>
+
+          <form action="/" method="DELETE">
+            <input class="logout" type="submit" value="Log Out">
+          </form>
+
         </span>
-      </span>
+
     </header>
+
     <form id="new-post-form" action="/posts" method="post">
+
       <div class="new-post">
-        <label for="message">Message: </label>
-        <input id="message" type="text" name="message" value="">
+        <label for="message" class="label">Create a post</label>
+        <input id="message" type="text" name="message" value="" placeholder="Write a message here...">
         <label for="file-upload" class="custom-file-upload" accept=".jpg, .jpeg, .png">
-          Image(PNG/JPG)
+          + Add image
       </label>
+
       <input id="file-upload" type="file" name="image"/>
         <input class="post"type="submit" value="Post">
       </div>
+
     </form>
+
+    <footer>Acebook™ in partnership with Eta™</footer>
+
   </body>
+
 </html>
