--- a/public/stylesheets/posts-index.css
+++ b/public/stylesheets/posts-index.css
@@ -41,6 +41,10 @@ footer{
     color:#edf2f4;
     text-align: left;
 }
+span{
+    align-self: center;
+    display: flex;
+  }
 
 span.request {
     display: flex;
@@ -55,8 +59,7 @@ span.site_logo {
 }
 span.user-pic{
     display: flex;
-    width: 100px;
-    justify-content: space-between;
+    width: 100%;
     align-items: center;
 }
 
@@ -82,6 +85,7 @@ div.profile-photo{
     height:50px;
     border-radius: 30px;
     border: solid black 3px;
+    margin-right:10px;
 }
 
 h1 {
@@ -119,4 +123,15 @@ hr {
 
 .space-evenly {
     justify-content: space-between;
+}
+
+input.logout {
+    border: none;
+    outline: none;
+    background: none;
+    cursor: pointer;
+    color: #00B7FF;
+    padding: 0;
+    font-family: inherit;
+    font-size: inherit;
 }
