--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,10 +1,10 @@
-<h1 class="title">{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1 class="title">Welcome to {{title}}</h1>
+
 
 <form method = 'GET' action = '/users/new'> 
     <input type = 'submit' value = 'Signup' >
 </form> 
 
-<form method = 'GET' action = '/login'>
+<form method = 'GET' action = '/sessions/new'>
         <input type = 'submit' value = 'Login' >
 </form>
