confirmation nearly working

--- a/views/users/details.hbs
+++ b/views/users/details.hbs
@@ -7,5 +7,11 @@
   {{#each user.friends}}
     <li>{{this.user_id}}</li>
     <li>{{this.status}}</li>
+    <form action="/users/{{this.user_id}}/confirm" method="post">
+        <input type="submit" value="Confirm">
+    </form>
+    <form action="/users/{{this.user_id}}/deny" method="post">
+        <input type="submit" value="Deny">
+    </form>
   {{/each}}
 </ul>
