--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <script
             src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js">
@@ -9,25 +9,34 @@
             href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
 
-    <body>
 
-        <header>
-            <span class="site_logo">
-                <img src="images/logo trial 3.png" alt="Acebook" height="50">
-            </span>
-            <span class="larger">
-                <a href="/posts/new">New post</a>
-                &nbsp;&nbsp;|&nbsp;&nbsp;
-                <form action="/sessions?_method=DELETE" method="POST">
-                    <input class="logout" type="submit" value="Log Out">
-                </form>
-            </span>
-        </header>
+
+<header>
+      <span class="site_logo">
+        <img src="/images/logo trial 3.png" alt="Acebook" height="50">
+      </span>
+
+        <span class="larger">
+
+          <form action="/posts/new">
+            <input class="logout" type="submit" value="New post">
+          </form>
+
+          <p>&nbsp;&nbsp;|&nbsp;&nbsp;</p>
+
+          <form action="/sessions?_method=DELETE" method="POST">
+            <input class="logout" type="submit" value="Log Out">
+          </form>
+
+        </span>
+      </span>
+    </header>
+    <body>
+        
         <div class="content">
             <h1>Timeline</h1>
 
             <div class="posts">
-
                 {{#each posts}}
                 <div class="post">
                     <div class="title">
@@ -74,8 +83,8 @@
             </div>
 
         </div>
+        </body> 
         <footer>Acebook™ in partnership with Eta™</footer>
-
-    </body>
-
 </html>
+
+
