adds max character count: 250

--- a/views/posts/details.hbs
+++ b/views/posts/details.hbs
@@ -3,7 +3,7 @@
 {{post.message}}
 
 <form action="/posts/{{this.post._id}}/create" method="post">
-    <input id="message" type="text" name="message" value="" required>
+    <input id="message" type="text" name="message" maxlength="250" required>
     <input type="submit" value="Create">
 </form>
 
