--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -1,5 +1,5 @@
 <form id="new-post-form" action="/posts" method="post">
   <label for="message">Message: </label>
-  <input id="message" type="text" name="message" value="" required>
+  <input id="message" type="text" name="message" maxlength="250" required>
   <input type="submit" value="Submit">
 </form>
