--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -1,7 +1,7 @@
-*{
-    padding: 0;
-    margin: 0;
-    font-family: "Optima", sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Optima", sans-serif;
 }
 
 form {
@@ -10,41 +10,45 @@ form {
 }
 
 body {
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #edf2f4;
-    color: #2B2D42;
-  }
-
-input[type=email], input[type=password], input[type=text] {
-    border-radius: 10px;
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #8d99ae42;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #edf2f4;
+  color: #2b2d42;
 }
 
-.password-field, .email-field, .username-field {
-    display:flex;
-    flex-direction: column;
-    width: 100%
+input[type="email"],
+input[type="password"],
+input[type="text"] {
+  border-radius: 10px;
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #8d99ae42;
+}
+
+.password-field,
+.email-field,
+.username-field {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .user-inputs {
-    display:flex;
-    flex-direction: column;
-    width: 100%;
-    font-family: "Optima", sans-serif;
-}    
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  font-family: "Optima", sans-serif;
+}
 
-input[type=submit] {
+input[type="submit"] {
   border-radius: 10px;
-  background-color: #2B2D42;
-  color: #EDF2F4;
+  background-color: #2b2d42;
+  color: #edf2f4;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
@@ -55,46 +59,46 @@ input[type=submit] {
 }
 
 a {
-    color: #00B7FF;
-    text-decoration: none;
-  }
+  color: #00b7ff;
+  text-decoration: none;
+}
 
-  header{
-    display: flex;
-    width: 100%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-left: 5%;
-    padding-right: 5%;
-    margin-bottom: 50px;
-    background-color: #2B2D42;
-    color:#edf2f4;
-    justify-content: space-between;
-  }
+header {
+  display: flex;
+  width: 100%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 5%;
+  padding-right: 5%;
+  margin-bottom: 50px;
+  background-color: #2b2d42;
+  color: #edf2f4;
+  justify-content: space-between;
+}
 
-  footer{
-    position: fixed;
-    bottom: 0%;
-    width: 100%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-right: 2%;
-    background-color: #2B2D42;
-    color:#edf2f4;
-    text-align: center;
-  }
+footer {
+  position: fixed;
+  bottom: 0%;
+  width: 100%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-right: 2%;
+  background-color: #2b2d42;
+  color: #edf2f4;
+  text-align: center;
+}
 
-  span{
-    align-self: center;
-    justify-content: space-between;
-  }
+span {
+  align-self: center;
+  justify-content: space-between;
+}
 
-  span.site_logo{
-    padding: 0%;
-    color: #edf2f4;
-    padding-left: 15px;
-  }
+span.site_logo {
+  padding: 0%;
+  color: #edf2f4;
+  padding-left: 15px;
+}
 
-  .login-signup {
-    padding-right: 15px;
-  }
+.login-signup {
+  padding-right: 15px;
+}
