--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,6 +1,7 @@
 <h1>Timeline</h1>
 <ul class="posts">
   {{#each posts}}
+  <a href="/users/{{this.user_id}}">User Profile</a>
   <li>{{this.message}}</li> 
   <li>{{this.likes}} likes</li>
   <form action="/posts/{{this._id}}/like" method="post">
