--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Acebook - Homepage</title>
         <script
             src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
         <link rel='stylesheet' href='/stylesheets/home-index.css' />
@@ -8,7 +9,7 @@
     <body>
         <header>
             <span class="site_logo">
-                <img src="/images/logo trial 3.png" alt="Acebook" height="50">
+                <a href="/posts"><img src="/images/logo trial 3.png" alt="Acebook" height="50"></a>
             </span>
 
             <span>
