added poster links to comments page

--- a/views/posts/details.hbs
+++ b/views/posts/details.hbs
@@ -1,5 +1,6 @@
 <h1>Post</h1>
 
+<a href="/users/{{post.user_id}}">User</a>
 {{post.message}}
 
 <form action="/posts/{{this.post._id}}/create" method="post">
