--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -6,5 +6,15 @@
 </form> 
 
 <form method = 'GET' action = '/sessions/new'>
+    <input type = 'submit' value = 'Login' >
+</form> 
+{{!-- <form method = 'GET' action = '/users/login'>
         <input type = 'submit' value = 'Login' >
-</form>
+</form> --}}
+
+{{!-- <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+  <input type="text" placeholder="Search for friends..">
+</div> --}}
