add confirm password input

--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -5,6 +5,8 @@
   <input id="email" type="email" name="email" value="">
   <label for="password">Password: </label>
   <input id="password" type="password" name="password" value="">
+  <label for="confirm_password"> Confirm Password: </label>
+  <input id="confirm_password" type="password" name="confirm_password" value="">
   <label for="username">Username: </label>
   <input id="username" type="username" name="username" value="">
   <input id="submit" type="submit" value="Submit">
